--- a/gREM_ms_16072014_new.tex
+++ b/gREM_ms_16072014_new.tex
@@ -218,8 +218,8 @@ D = z/vt\bar{p}
 
 
 %fix this @Tim
-gREM submodels differ discontinuously (figure 2) at different combinations of $\alpha$ and $\theta$ because the number and nature of intervals needed to describe the average profile width changes.  
-Examine the profile at $x_1 = 	\theta/2 + \pi/2$ (the profile is perpendicular to the edge of the blind spot.) We see that there is potentially a case where the left side of the profile is $r\sin \alpha/2$ while the right side is zero. This profile does not exist if we return to the full $2r\sin \alpha/2$ profile before $x_1  = \theta/2 + \pi/2$. Therefore we solve $5\pi/2 - \theta/2 - \alpha/2 <  \theta/2 + \pi/2$. We find that this new profile only exists if $ \alpha < 4\pi - 2 \theta$. This inequality defines the line separating models SE2 and its neighbouring model, SE3.
+
+The gREM must be split into submodels rather than having one equation that describes $\bar{p}$ everywhere in parameter space. The reason for this is that there are situations where a small parameter change causes a different expression for $p$ to be needed rather than the size of $p$ changing smoothly as it would in the above expressions. We can see this in the equations by noting, for example, that $p=r\sin\frac{\alpha}{2}$ starts to get smaller as $\alpha$ increases beyond $\pi$. A wider animal signal width cannot give a decreased area that the animal can be detected in and so the equation must be changed. As a more visual example, if $\alpha$ was small, there would be an interval between Fig.~\ref{f:secondInt} and \ref{f:thirdInt} where the `blind spot' would prevent animals being detected at all giving a profile width of 0. This would require an extra integral in our equation for $\bar{p}$ as simply putting our small value of $\alpha$ into eqn \ref{e:SE2int} would not give us this integral of $p=0$.
 
 gREM submodel specifications were done by hand, and the integration was done using SymPy \citep{sympy} in Python (Appendix S3). The gREM submodels were checked by confirming that: 1) submodels adjacent in parameter space were equal at the boundary between them; 2) submodels that border $ \alpha = 0$ had$p = 0$ when $ \alpha = 0$; 3) average profile widths $\bar{p}$ were between 0 and $2r$ and; 4) each integral, divided by the range of angles that it was integrated over, was between 0 and $2r$. The scripts for these tests are included in Appendix S3 and the R \citep{R} implementation of the gREM is given in Appendix S4.  
 
